fix(components): [el-table] fix invalid maxHeight issue (#5584)
* fix(components): [el-table] fix invalid maxHeight issue

fix #5580

* fix: remove native scrollbar

--- a/packages/theme-chalk/src/table.scss
+++ b/packages/theme-chalk/src/table.scss
@@ -115,18 +115,6 @@
     }
   }
 
-  @include m(scrollable-x) {
-    .#{$namespace}-table__body-wrapper {
-      overflow-x: auto;
-    }
-  }
-
-  @include m(scrollable-y) {
-    .#{$namespace}-table__body-wrapper {
-      overflow-y: scroll;
-    }
-  }
-
   thead {
     color: var(--el-table-header-text-color);
     font-weight: 500;
